--- a/src/ui/globals.css
+++ b/src/ui/globals.css
@@ -27,3 +27,13 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+.map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+    /* width: 500px;
+  height: 300px; */
+}
