--- a/src/ui/globals.css
+++ b/src/ui/globals.css
@@ -33,7 +33,7 @@ a {
   top: 0;
   bottom: 0;
   left: 0;
-  width: 100%;
-    /* width: 500px;
-  height: 300px; */
+  /* width: 100%; */
+  width: 750px;
+  height: 600px;
 }
