Some tests on the map, not conclusive...

--- a/src/ui/globals.css
+++ b/src/ui/globals.css
@@ -28,12 +28,20 @@ a {
   text-decoration: none;
 }
 
-.map {
+/* .map {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
-  /* width: 100%; */
+  width: 100%;
   width: 750px;
   height: 600px;
+} */
+
+.map {
+  position: absolute;
+  top: 0;
+  bottom: 25px;
+  left: 0;
+  width: 100%;
 }
