--- a/src/ui/globals.css
+++ b/src/ui/globals.css
@@ -1,47 +1,3 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-/* .map {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  width: 750px;
-  height: 600px;
-} */
-
-.map {
-  position: absolute;
-  top: 0;
-  bottom: 25px;
-  left: 0;
-  width: 100%;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
